Fixed scaling on mobile

--- a/mainstyle.css
+++ b/mainstyle.css
@@ -581,3 +581,38 @@ input[type="submit"]:hover{
         overflow: hidden;
     }
 }
+
+@media screen and (max-width:455px){
+    #mainDiv{
+        width: 380px;
+        overflow-x: hidden;
+    }
+    
+    .gridParent{
+        display: grid;
+        width: 100%;
+        margin: auto;
+        grid-template-columns: repeat(2, minmax(150px, 1fr));
+        grid-template-rows: repeat(5, minmax(50px, 140px));
+        grid-gap: 0px;
+        grid-row-gap: 10px;
+        overflow: none;
+        margin-bottom: 10px;
+    }
+    .projItemImg{
+    /*    max-width: 100%;
+        max-height: 100%;
+        min-width: 100%;
+        min-height: 100%;*/
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        min-height: 0;
+        display: inline-block;
+        outline-color: white;
+        outline-width: thin;
+        box-shadow: 2px 3px 3px 1px #050c11;
+        overflow: none;
+        transition: opacity 0.4s ease-out;
+    }
+}
